--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,11 @@
     	<version>1.5.11</version>
     </dependency>
     <dependency>
+        <groupId>org.jibx</groupId>
+        <artifactId>jibx-run</artifactId>
+        <version>1.2.2</version>
+    </dependency>
+    <dependency>
     	<groupId>org.dataone</groupId>
     	<artifactId>dataone-service-api</artifactId>
     	<version>0.3.0</version>
