(#651): Update the harvestor to read mn_replicate.listObjects()

--- a/pom.xml
+++ b/pom.xml
@@ -2,18 +2,19 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.dataone</groupId>
-  <artifactId>d1-java</artifactId>
+  <artifactId>d1-java-client</artifactId>
   <packaging>jar</packaging>
-  <version>0.0.2</version>
+  <version>0.4.0</version>
   <name>DataONE Java Client Library</name>
   <url>http://dataone.org</url>
   <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.7</version>
+            <type>jar</type>
+            <scope>test</scope>
+        </dependency>
     <dependency>
     	<groupId>net.sf.jsignature.io-tools</groupId>
     	<artifactId>easystream</artifactId>
