--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,25 @@
                   <header>src/license-header.txt</header>
               </configuration>
           </plugin>
+          <plugin>
+        	<groupId>org.apache.maven.plugins</groupId>
+        	<artifactId>maven-surefire-plugin</artifactId>
+        	<configuration>
+          		<skip>true</skip>
+        	</configuration>
+        	<executions>
+          		<execution>
+            			<id>surefire-it</id>
+            			<phase>integration-test</phase>
+            			<goals>
+              				<goal>test</goal>
+            			</goals>
+            			<configuration>
+              				<skip>false</skip>
+            			</configuration>
+          		</execution>
+        	</executions>
+      	  </plugin>
       </plugins>
   </build>
   <licenses>
