re-worked the d1clienttest to use errorHandler instead of fail statements so that we can test more than one server and a failure on one will not kill the entire test.  Also changed the assert statements to use the error handler so that all errors come out the same.

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,12 @@
             <scope>test</scope>
         </dependency>
     <dependency>
+  	<groupId>org.jmock</groupId>
+  	<artifactId>jmock-junit4</artifactId>
+  	<version>2.5.1</version>
+	<scope>test</scope>
+    </dependency>
+    <dependency>
     	<groupId>net.sf.jsignature.io-tools</groupId>
     	<artifactId>easystream</artifactId>
     	<version>1.2.5</version>
