--- a/pom.xml
+++ b/pom.xml
@@ -2,9 +2,9 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.dataone</groupId>
-  <artifactId>d1-java-client</artifactId>
+  <artifactId>d1_client_java</artifactId>
   <packaging>jar</packaging>
-  <version>0.5.0</version>
+  <version>0.5.1</version>
   <name>DataONE Java Client Library</name>
   <url>http://dataone.org</url>
     <repositories>
@@ -114,7 +114,7 @@
   </build>
   <licenses>
     <license>
-      <name>GNU General Public License (GPL), Version 2.0</name>
+      <name>Apache License, Version 2.0</name>
       <url>LICENSE.txt</url>
     </license>
   </licenses>
