--- a/pom.xml
+++ b/pom.xml
@@ -69,7 +69,7 @@
     </dependency>
     <dependency>
     	<groupId>org.dataone</groupId>
-    	<artifactId>dataone-service-api</artifactId>
+    	<artifactId>d1_common_java</artifactId>
     	<version>0.5.0</version>
       <type>jar</type>
     </dependency>
