--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,7 @@
                   <header>src/license-header.txt</header>
               </configuration>
           </plugin>
+          <!--
           <plugin>
         	<groupId>org.apache.maven.plugins</groupId>
         	<artifactId>maven-surefire-plugin</artifactId>
@@ -105,11 +106,12 @@
               				<goal>test</goal>
             			</goals>
             			<configuration>
-              				<skip>false</skip>
+              				<skip>true</skip>
             			</configuration>
           		</execution>
         	</executions>
       	  </plugin>
+          -->
       </plugins>
   </build>
   <licenses>
