--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,13 @@
     	<version>1.4.1</version>
     </dependency>
     <dependency>
+        <groupId>javax.servlet</groupId>
+        <artifactId>servlet-api</artifactId>
+        <version>2.5</version>
+        <type>jar</type>
+        <scope>provided</scope>
+    </dependency>
+    <dependency>
     	<groupId>org.slf4j</groupId>
     	<artifactId>slf4j-api</artifactId>
     	<version>1.5.11</version>
