--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,11 @@
         <version>1.2.2</version>
     </dependency>
     <dependency>
+		<groupId>bouncycastle</groupId>
+		<artifactId>bcprov-jdk16</artifactId>
+		<version>140</version>
+	</dependency>
+    <dependency>
     	<groupId>org.dataone</groupId>
     	<artifactId>d1_common_java</artifactId>
     	<version>0.6.2-SNAPSHOT</version>
