simplify the CM now that we have settled on PEM-formatted certificates

--- a/src/main/resources/auth.properties
+++ b/src/main/resources/auth.properties
@@ -1,4 +1,3 @@
-certificate.name=/tmp/x509up_u503
 certificate.keystore=/tmp/x509up_u503
-certificate.keystore.password=changeitchangeit
-certificate.keystore.type=PKCS12
+certificate.keystore.password=changeit
+certificate.keystore.type=JKS
