locate certificate based on rules defined by CILogon http://www.cilogon.org/cert-howto#TOC-Finding-CILogon-Certificates In order for other devs to successfully run tests, you'll need only to get your CILogon cert - it will take care of the rest

--- a/src/main/resources/org/dataone/configuration/auth.properties
+++ b/src/main/resources/org/dataone/configuration/auth.properties
@@ -1,3 +1,5 @@
-certificate.location=/tmp/x509up_u503
+## certificate location is calculated in code but can be specified here in special cases
+#certificate.location=/tmp/x509up_u503
+## the keystore is only created in memory, but can be configured here
 certificate.keystore.password=changeit
 certificate.keystore.type=JKS
