--- a/pom.xml
+++ b/pom.xml
@@ -69,7 +69,7 @@
         <type>jar</type>
         <scope>provided</scope>
     </dependency>
-    <dependency>
+ <!--    <dependency>
     	<groupId>org.slf4j</groupId>
     	<artifactId>slf4j-api</artifactId>
     	<version>1.5.11</version>
@@ -78,7 +78,7 @@
     	<groupId>org.slf4j</groupId>
     	<artifactId>slf4j-simple</artifactId>
     	<version>1.5.11</version>
-    </dependency>
+    </dependency> -->
     <dependency>
         <groupId>org.jibx</groupId>
         <artifactId>jibx-run</artifactId>
