--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -55,5 +55,5 @@ log4j.appender.stdout.layout.ConversionPattern=%d{yyyyMMdd-HH:mm:ss}: [%p]: %m [
 
 ################################################################################
 # EXAMPLE: Print only messages of level WARN or above in the package com.foo:
-log4j.logger.org.dataone=DEBUG
+#log4j.logger.org.dataone=DEBUG
 
