Add the dataone.hazelcast.nodes property to name the shared hazelcast node map. Change the replicationIdGenerator property to taskIdGenerator to be more widely applicable.

--- a/src/main/resources/org/dataone/configuration/d1hazelcast.properties
+++ b/src/main/resources/org/dataone/configuration/d1hazelcast.properties
@@ -4,6 +4,9 @@
 dataone.hazelcast.group=DataONE
 dataone.hazelcast.password=password
 
+# The name of the cluster-wide node map
+dataone.hazelcast.nodes=hzNodes
+
 # The name of the cluster-wide system metadata map
 dataone.hazelcast.systemMetadata=hzSystemMetadata
 
@@ -17,4 +20,4 @@ dataone.hazelcast.replicationQueuedTasks=hzReplicationTasks
 dataone.hazelcast.replicationPendingTasks=hzPendingReplicationTasks
 
 # The name of the id generator to uniquely produce cluster-wide task ids
-dataone.hazelcast.replicationIdGenerator=replication-ids
+dataone.hazelcast.taskIdGenerator=task-ids
