--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,13 @@
 		<type>test-jar</type>
 		<scope>test</scope>
     </dependency>
+    <dependency>
+    	<groupId>org.apache.httpcomponents</groupId>
+    	<artifactId>httpcore</artifactId>
+    	<version>4.1.3</version>
+    	<type>jar</type>
+    	<scope>compile</scope>
+    </dependency>
   </dependencies>
   <build>
       <plugins>
