--- a/pom.xml
+++ b/pom.xml
@@ -122,6 +122,12 @@
             <artifactId>slf4j-simple</artifactId>
             <version>1.6.0</version>
         </dependency>
+	<dependency>
+        <groupId>com.googlecode.foresite-toolkit</groupId>
+        <artifactId>foresite</artifactId>
+        <version>1.0-SNAPSHOT</version>
+        <type>jar</type>
+    </dependency>    
   </dependencies>
   <build>
       <plugins>
