--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,14 @@
             <id>Jibx Maven Repository</id>
             <url>http://jibx.sourceforge.net/maven/</url>
         </repository>
+		<repository>
+			<id>maven2-repository.dev.java.net</id>
+			<name>Java.net Repository for Maven</name>
+			<url>http://download.java.net/maven/2/</url>
+			<layout>default</layout>
+		</repository>
     </repositories>
+    
   <dependencies>
         <dependency>
             <groupId>junit</groupId>
@@ -121,7 +128,14 @@
         <artifactId>foresite</artifactId>
         <version>1.0-SNAPSHOT</version>
         <type>jar</type>
-    </dependency>    
+    </dependency>
+	<dependency>
+		<groupId>jcs</groupId>
+		<artifactId>jcs</artifactId>
+		<version>1.3</version>
+		<type>jar</type>
+		<scope>compile</scope>
+	</dependency>
   </dependencies>
   <build>
       <plugins>
