use cn-dev as default coordinating node until we are actually ready to deploy on CN

--- a/src/main/resources/org/dataone/configuration/d1client.properties
+++ b/src/main/resources/org/dataone/configuration/d1client.properties
@@ -1,3 +1,3 @@
-D1Client.CN_URL=http://cn.dataone.org/cn
+D1Client.CN_URL=http://cn-dev.dataone.org/cn
 D1Client.certificate.directory=/etc/dataone/client/certs
 D1Client.useLocalCache=true
