--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <groupId>org.dataone</groupId>
   <artifactId>d1_libclient_java</artifactId>
   <packaging>jar</packaging>
-  <version>1.0.1-SNAPSHOT</version>
+  <version>1.0.1-RC1</version>
   <name>DataONE Java Client Library</name>
   <url>http://dataone.org</url>
     <repositories>
@@ -99,13 +99,13 @@
     <dependency>
     	<groupId>org.dataone</groupId>
     	<artifactId>d1_common_java</artifactId>
-    	<version>1.0.1-SNAPSHOT</version>
+    	<version>1.0.1-RC1</version>
 		<type>jar</type>
     </dependency>
     <dependency>
     	<groupId>org.dataone</groupId>
     	<artifactId>d1_common_java</artifactId>
-    	<version>1.0.1-SNAPSHOT</version>
+    	<version>1.0.1-RC1</version>
 		<type>test-jar</type>
 		<scope>test</scope>
     </dependency>
