--- a/pom.xml
+++ b/pom.xml
@@ -214,6 +214,22 @@
             </executions>
         </plugin>
       </plugins>
+		<resources>
+	      <resource>
+	        <directory>src/main/resources</directory>
+	        <filtering>true</filtering>
+	        <includes>
+	          <include>buildInfo/buildInfo.properties</include>
+	        </includes>
+	      </resource>
+	      <resource>
+	        <directory>src/main/resources</directory>
+	        <filtering>false</filtering>
+	        <includes>
+	          <include>**/*.*</include>
+	        </includes>
+	      </resource>
+		</resources>
   </build>
   <licenses>
     <license>
