Add the D1Client.useObjectFormatCache property to d1_libclient_java, defaulting it to true.  Change this to false for testing purposes.

--- a/src/main/resources/org/dataone/configuration/d1client.properties
+++ b/src/main/resources/org/dataone/configuration/d1client.properties
@@ -4,3 +4,4 @@
 D1Client.CN_URL=https://cn.dataone.org/cn
 D1Client.certificate.directory=/etc/dataone/client/certs
 D1Client.useLocalCache=true
+D1Client.useObjectFormatCache=true
