--- a/src/main/resources/org/dataone/configuration/d1client.properties
+++ b/src/main/resources/org/dataone/configuration/d1client.properties
@@ -2,6 +2,9 @@
 # properties file in your application package, using this same property value
 # This should effectively mask/override the value contained herein
 D1Client.CN_URL=https://cn.dataone.org/cn
+#
+# This property does not seem to be used by anyone in d1_libclient_java
 D1Client.certificate.directory=/etc/dataone/client/certs
 D1Client.useLocalCache=true
-D1Client.useObjectFormatCache=true
+CNode.useObjectFormatCache=true
+ObjectFormatCache.minimum.refresh.interval.seconds=20
