--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <groupId>org.dataone</groupId>
   <artifactId>d1_libclient_java</artifactId>
   <packaging>jar</packaging>
-  <version>1.0.1-RC2</version>
+  <version>1.0.1-RC3-SNAPSHOT</version>
   <name>DataONE Java Client Library</name>
   <url>http://dataone.org</url>
     <repositories>
@@ -99,20 +99,20 @@
     <dependency>
     	<groupId>org.dataone</groupId>
     	<artifactId>d1_common_java</artifactId>
-    	<version>1.0.1-RC2</version>
+    	<version>1.0.1-RC3-SNAPSHOT</version>
 		<type>jar</type>
     </dependency>
     <dependency>
     	<groupId>org.dataone</groupId>
     	<artifactId>d1_common_java</artifactId>
-    	<version>1.0.1-RC2</version>
+    	<version>1.0.1-RC3-SNAPSHOT</version>
 		<type>test-jar</type>
 		<scope>test</scope>
     </dependency>
         <dependency>
             <groupId>org.dataone</groupId>
             <artifactId>d1_test_resources</artifactId>
-            <version>1.0.0-RC1</version>
+            <version>1.0.0-RC2-SNAPSHOT</version>
             <type>jar</type>
             <scope>test</scope>
         </dependency>
