added cache expiration for the nodemap CNode holds for looking up baseurls.  Added javadoc comments regarding caching behavior for all types of caching being done in libclient

--- a/src/main/resources/org/dataone/configuration/d1client.properties
+++ b/src/main/resources/org/dataone/configuration/d1client.properties
@@ -8,3 +8,4 @@ D1Client.certificate.directory=/etc/dataone/client/certs
 D1Client.useLocalCache=true
 CNode.useObjectFormatCache=true
 ObjectFormatCache.minimum.refresh.interval.seconds=20
+CNode.nodemap.cache.refresh.interval.seconds=3600
