--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <groupId>org.dataone</groupId>
   <artifactId>d1_libclient_java</artifactId>
   <packaging>jar</packaging>
-  <version>1.0.1-RC7-SNAPSHOT</version>
+  <version>1.0.1-RC7</version>
   <name>DataONE Java Client Library</name>
   <url>http://dataone.org</url>
     <properties>
@@ -12,8 +12,8 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <bouncycastle.version>1.46</bouncycastle.version>
-        <d1_common_java_version>1.0.1-RC6-SNAPSHOT</d1_common_java_version>
-        <d1_test_resources.version>1.0.0-RC4-SNAPSHOT</d1_test_resources.version>
+        <d1_common_java_version>1.0.1-RC6</d1_common_java_version>
+        <d1_test_resources.version>1.0.0-RC3</d1_test_resources.version>
     </properties>
     <repositories>
         <repository>
