--- a/src/main/resources/org/dataone/configuration/auth.properties
+++ b/src/main/resources/org/dataone/configuration/auth.properties
@@ -3,4 +3,5 @@
 ## the keystore is only created in memory, but can be configured here
 certificate.keystore.password=changeit
 certificate.keystore.type=JKS
+certificate.truststore.useDefault=true
 cilogon.oid.subjectinfo=1.3.6.1.4.1.34998.2.1
