moved log4j.properties out of src/main and into src/test (to follow best practices).  added ObjectFormatCache.override.CN_URL property to ObjectFormatCache to allow cn.listFormats to be called in certain integration test contexts.

--- a/src/main/resources/org/dataone/configuration/d1client.properties
+++ b/src/main/resources/org/dataone/configuration/d1client.properties
@@ -8,4 +8,5 @@ D1Client.certificate.directory=/etc/dataone/client/certs
 D1Client.useLocalCache=true
 CNode.useObjectFormatCache=true
 ObjectFormatCache.minimum.refresh.interval.seconds=20
+#ObjectFormatCache.overriding.CN_URL=
 CNode.nodemap.cache.refresh.interval.seconds=3600
