--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -33,16 +33,16 @@
 ################################################################################
 
 # set the log level to WARN and the log should be printed to stdout. 
-log4j.rootLogger=WARN, stdout
+log4j.rootLogger=WARN, stderr
 #log4j.threshold=FATAL, ERROR, WARN, INFO
 
 
 ### LOGGING TO CONSOLE #########################################################
-log4j.appender.stdout=org.apache.log4j.ConsoleAppender
-log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
+log4j.appender.stderr=org.apache.log4j.ConsoleAppender
+log4j.appender.stderr.layout=org.apache.log4j.PatternLayout
 
 # define the pattern to be used in the logs... 
-log4j.appender.stdout.layout.ConversionPattern=%d{yyyyMMdd-HH:mm:ss}: [%p]: %m [%c]%n
+log4j.appender.stderr.layout.ConversionPattern=%d{yyyyMMdd-HH:mm:ss}: [%p]: %m [%c]%n
 
 # %p -> priority level of the event - (e.g. WARN)
 # %m -> message to be printed
