--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,7 @@
   	<version>2.5.1</version>
 	<scope>test</scope>
     </dependency>
+<!-- do we even need easystream?  -->
     <dependency>
       <groupId>net.sf.jsignature.io-tools</groupId>
       <artifactId>easystream</artifactId>
@@ -99,11 +100,21 @@
         <artifactId>jibx-run</artifactId>
         <version>1.2.3</version>
     </dependency>
-        <dependency>
-            <groupId>org.bouncycastle</groupId>
-            <artifactId>bcprov-jdk16</artifactId>
-            <version>${bouncycastle.version}</version>
-        </dependency>
+
+	<dependency>
+		<groupId>org.bouncycastle</groupId>
+		<artifactId>bcprov-jdk16</artifactId>
+		<version>${bouncycastle.version}</version>
+	</dependency>
+        
+    <!--  declaring this dependency to make sure we get version with StrLookup
+          this needs to be before Foresite and JCS -->
+	<dependency>
+		<groupId>commons-lang</groupId>
+		<artifactId>commons-lang</artifactId>
+		<version>2.6</version>
+	</dependency>
+        
     <dependency>
     	<groupId>org.dataone</groupId>
     	<artifactId>d1_common_java</artifactId>
