first pass at inclusion of dataone-trusted-certs in TrustManager.

--- a/src/main/resources/org/dataone/configuration/auth.properties
+++ b/src/main/resources/org/dataone/configuration/auth.properties
@@ -4,4 +4,5 @@
 certificate.keystore.password=changeit
 certificate.keystore.type=JKS
 certificate.truststore.useDefault=true
+certificate.truststore.aux.location=d1-trusted-certs.crt
 cilogon.oid.subjectinfo=1.3.6.1.4.1.34998.2.1
