--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -55,5 +55,5 @@ log4j.appender.stderr.layout.ConversionPattern=%d{yyyyMMdd-HH:mm:ss}: [%p]: %m [
 
 ################################################################################
 # EXAMPLE: Print only messages of level WARN or above in the package com.foo:
-log4j.logger.org.dataone.client.auth=DEBUG
+log4j.logger.org.dataone.client.auth=INFO
 
