--- a/pom.xml
+++ b/pom.xml
@@ -135,13 +135,22 @@
             <type>jar</type>
             <scope>test</scope>
         </dependency>
-    <dependency>
+
+<!--    <dependency>
     	<groupId>org.apache.httpcomponents</groupId>
     	<artifactId>httpcore</artifactId>
-    	<version>4.1.3</version>
+    	<version>4.2.1</version>
     	<type>jar</type>
     	<scope>compile</scope>
     </dependency>
+-->
+
+     <dependency>
+    	<groupId>org.apache.httpcomponents</groupId>
+    	<artifactId>httpclient</artifactId>
+    	<version>4.2.1</version>
+    </dependency>
+     
 	<dependency>
         <groupId>com.googlecode.foresite-toolkit</groupId>
         <artifactId>foresite</artifactId>
