Added ObjectFormatInfo class to act as a source of metadaata about ObjectFormats without actually modifying the ObjectFormat class itself.  For now, ObjectFormatInfo is a singleton that loads a CSV containing format metadata such as mime type and file extension for each format.  It provides accessors to look up the mime type and extension using the formatID string and an ObjectFormat instance.  Mapping data between formats and mimetpye/extension is currently maintained in a CSV file that is included as a resource in libclient.  Updates to this file can occur in application-controlled filesystem copies of this CSV file.  See the "D1Client.resourcesDir" property for the location of this CSV file.  If this Setting is unset, the mappings file is placed in $HOME/DataONE.

--- a/src/main/resources/org/dataone/configuration/d1client.properties
+++ b/src/main/resources/org/dataone/configuration/d1client.properties
@@ -6,6 +6,7 @@ D1Client.CN_URL=https://cn.dataone.org/cn
 # This property does not seem to be used by anyone in d1_libclient_java
 D1Client.certificate.directory=/etc/dataone/client/certs
 D1Client.useLocalCache=true
+#D1Client.resourcesDir=/Users/jones/d1testdir
 CNode.useObjectFormatCache=true
 ObjectFormatCache.minimum.refresh.interval.seconds=20
 #ObjectFormatCache.overriding.CN_URL=
