--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,11 @@
     </repositories>
     
   <dependencies>
+  		<dependency>
+			<groupId>com.beetstra.jutf7</groupId>
+			<artifactId>jutf7</artifactId>
+			<version>1.0.0</version>
+		</dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
