add comment about why uft7 library is included

--- a/pom.xml
+++ b/pom.xml
@@ -49,18 +49,19 @@
     </repositories>
     
   <dependencies>
-  		<dependency>
-			<groupId>com.beetstra.jutf7</groupId>
-			<artifactId>jutf7</artifactId>
-			<version>1.0.0</version>
-		</dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.7</version>
-            <type>jar</type>
-            <scope>test</scope>
-        </dependency>
+	<!-- Java does not support UTF-7 encoding by default, this library does  -->
+	<dependency>
+		<groupId>com.beetstra.jutf7</groupId>
+		<artifactId>jutf7</artifactId>
+		<version>1.0.0</version>
+	</dependency>
+	<dependency>
+		<groupId>junit</groupId>
+		<artifactId>junit</artifactId>
+		<version>4.7</version>
+		<type>jar</type>
+		<scope>test</scope>
+	</dependency>
     <dependency>
   	<groupId>org.jmock</groupId>
   	<artifactId>jmock-junit4</artifactId>
