--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -56,4 +56,6 @@ log4j.appender.stderr.layout.ConversionPattern=%d{yyyyMMdd-HH:mm:ss}: [%p]: %m [
 ################################################################################
 # EXAMPLE: Print only messages of level WARN or above in the package com.foo:
 log4j.logger.org.dataone.client.auth=INFO
+#log4j.logger.com.hp.hpl.jena=WARN
+#log4j.logger.org.dataone.ore=INFO
 
