--- a/pom.xml
+++ b/pom.xml
@@ -272,19 +272,38 @@
 				</executions>
 			</plugin>
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-assembly-plugin</artifactId>
-				<version>2.4</version>
-				 <configuration>
-                    <descriptors>
-                        <descriptor>src/main/assembly/withDependencies.xml</descriptor>
-                    </descriptors>
-                 </configuration>
+			  <groupId>org.apache.maven.plugins</groupId>
+			  <artifactId>maven-assembly-plugin</artifactId>
+			  <version>2.4</version>
+			  <configuration>
+			    <descriptors>
+                              <descriptor>src/main/assembly/withDependencies.xml</descriptor>
+			    </descriptors>
+			  </configuration>
 		<!-- 		<configuration>
 					<descriptorRefs>
 						<descriptorRef>project</descriptorRef>
 					</descriptorRefs>
 				</configuration> -->
+			</plugin>
+			<plugin>
+			  <artifactId>maven-javadoc-plugin</artifactId>
+			  <version>2.9</version>
+			  <executions>
+			    <execution>
+			      <id>resource-bundles</id>
+			      <phase>package</phase>
+			      <goals>
+				<!-- produce source artifact for main project sources -->
+				<goal>resource-bundle</goal>
+			      </goals>
+			    </execution>
+			  </executions>
+			  <configuration>
+			    <additionalparam>-noqualifier org.dataone.*:java.lang.*</additionalparam>
+			    <detectOfflineLinks>false</detectOfflineLinks>
+<!-- 			    <debug>true</debug>  -->
+			  </configuration>
 			</plugin>
 		</plugins>
 		<resources>
