--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
 		<bouncycastle.version>1.46</bouncycastle.version>
-		<d1_common_java_version>1.2.0-SNAPSHOT</d1_common_java_version>
+		<d1_common_java_version>1.3.0-SNAPSHOT</d1_common_java_version>
 		<d1_test_resources.version>1.2.0-SNAPSHOT</d1_test_resources.version>
 	</properties>
 	<repositories>
@@ -47,6 +47,7 @@
 			<layout>default</layout>
 		</repository>
 	</repositories>
+    
 
 	<dependencies>
 		<dependency>
@@ -323,6 +324,37 @@
 			  </configuration>
 			</plugin>
 		</plugins>
+		<!--  the pluginManagement section is included to keep Eclipse m2e from 
+		      trying (and failing) to run the command - and avoid the little red
+		      markers in Eclipse -->
+		<pluginManagement>
+  			<plugins>
+			    <plugin>
+			      <groupId>org.eclipse.m2e</groupId>
+			      <artifactId>lifecycle-mapping</artifactId>
+			      <version>1.0.0</version>
+			      <configuration>
+			        <lifecycleMappingMetadata>
+			          <pluginExecutions>
+			            <pluginExecution>
+			              <pluginExecutionFilter>
+			                <groupId>org.apache.maven.plugins</groupId>
+			                <artifactId>maven-dependency-plugin</artifactId>
+			                <versionRange>[2.0,)</versionRange>
+			                <goals>
+			                  <goal>copy-dependencies</goal>
+			                </goals>
+			              </pluginExecutionFilter>
+			              <action>
+			                <ignore />
+			              </action>
+			            </pluginExecution>
+			          </pluginExecutions>
+			        </lifecycleMappingMetadata>
+			      </configuration>
+			    </plugin>
+		    </plugins>
+		</pluginManagement>
 		<resources>
 			<resource>
 				<directory>src/main/resources</directory>
