adding maxObjectSize property to D1Client cache properties.  refs #6559

--- a/src/main/resources/org/dataone/configuration/d1client.properties
+++ b/src/main/resources/org/dataone/configuration/d1client.properties
@@ -5,8 +5,15 @@ D1Client.CN_URL=https://cn.dataone.org/cn
 #
 # This property does not seem to be used by anyone in d1_libclient_java
 D1Client.certificate.directory=/etc/dataone/client/certs
-D1Client.useLocalCache=true
-#D1Client.resourcesDir=/Users/jones/d1testdir
+
+# Set this property to true to have get() and getSystemMetadata() calls cached in memory
+D1Client.useLocalCache=false
+# the size limit manages the maximum size of an object that can be cached.
+# 10457680 (bytes) = 10Mb.  The size limit is used to protect against out
+# of memory / heap errors that can occur when trying to cache huge objects
+# This setting should be considered proportional to available memory.
+D1Client.cacheObjectSizeLimit=10485760
+
 CNode.useObjectFormatCache=true
 ObjectFormatCache.minimum.refresh.interval.seconds=20
 #ObjectFormatCache.overriding.CN_URL=
