--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-		<bouncycastle.version>1.46</bouncycastle.version>
+		<bouncycastle.version>1.52</bouncycastle.version>
 		<d1_common_java_version>2.0.0-SNAPSHOT</d1_common_java_version>
 		<d1_test_resources.version>1.3.0-SNAPSHOT</d1_test_resources.version>
 	</properties>
@@ -93,7 +93,7 @@
 
 		<dependency>
 			<groupId>org.bouncycastle</groupId>
-			<artifactId>bcprov-jdk15on</artifactId>
+			<artifactId>bcpkix-jdk15on</artifactId>
 			<version>${bouncycastle.version}</version>
 		</dependency>
 
