refactored the TLS protocol used by CertificateManager into a settable configuration, and made the default TLSv1.2, for better interoperability with Java7 (which doesn't enable 1.2 by default).

--- a/src/main/resources/org/dataone/configuration/auth.properties
+++ b/src/main/resources/org/dataone/configuration/auth.properties
@@ -6,3 +6,5 @@ certificate.keystore.type=JKS
 certificate.truststore.includeD1CAs=true
 certificate.truststore.aux.location=/etc/dataone/truststore
 cilogon.oid.subjectinfo=1.3.6.1.4.1.34998.2.1
+# the following configures the SSLContext with the most appropriate TLS version
+tls.protocol.alias=TLSv1.2
