--- a/src/main/resources/org/dataone/configuration/auth.properties
+++ b/src/main/resources/org/dataone/configuration/auth.properties
@@ -6,3 +6,9 @@ certificate.keystore.type=JKS
 certificate.truststore.includeD1CAs=true
 certificate.truststore.aux.location=/etc/dataone/truststore
 cilogon.oid.subjectinfo=1.3.6.1.4.1.34998.2.1
+# the following configures the SSLContext with the most appropriate TLS version
+# As of April 2015, this is TLSv1.2.  In Java7, the general protocol alias 'TLS'
+# points to TLSv1.0, but breaks client-initiated renegotiation and doesn't support
+# servers that only support TLSv1.1 or higher. 
+# If your runtime is Java 6, set this property value to "TLS"
+tls.protocol.alias=TLSv1.2
