--- a/src/main/resources/org/dataone/configuration/auth.properties
+++ b/src/main/resources/org/dataone/configuration/auth.properties
@@ -10,5 +10,9 @@ cilogon.oid.subjectinfo=1.3.6.1.4.1.34998.2.1
 # As of April 2015, this is TLSv1.2.  In Java7, the general protocol alias 'TLS'
 # points to TLSv1.0, but breaks client-initiated renegotiation and doesn't support
 # servers that only support TLSv1.1 or higher. 
-# If your runtime is Java 6, set this property value to "TLS"
-tls.protocol.alias=TLSv1.2
+# For this patch release (1.3.1), we are keeping the default version at 'TLS', 
+# but in future releases (1.4.x, 2.0) the default will change.
+# If your runtime is Java 6, set this property value to "TLS", otherwise it is
+# safe (and probably preferred for Java7) to set to TLSv1.2.  If you are using
+# Java8,  TLS will actually use TLSv1.2, so you can use 'TLS'. 
+tls.protocol.alias=TLS
