added the tls.protocol.preferences property to CertificateManager to give maximum runtime compatibility and security for TLS connections. Default preferences support java 6,7, & 8 at their highest supported protocol version.

--- a/src/main/resources/org/dataone/configuration/auth.properties
+++ b/src/main/resources/org/dataone/configuration/auth.properties
@@ -6,3 +6,25 @@ certificate.keystore.type=JKS
 certificate.truststore.includeD1CAs=true
 certificate.truststore.aux.location=/etc/dataone/truststore
 cilogon.oid.subjectinfo=1.3.6.1.4.1.34998.2.1
+# ======== TLS CONFIGURATION ==========
+# The ideal client TLS configuration will change over time, and is dependent on what 
+# versions are available to the client runtime, and also how intolerant servers
+# will be to versions beyond what they support (a situation dubbed 'TLS version 
+# intolerance') 
+# As of April 2015 (java 6 at EOL, java 7 at End of Public Updates, and java 8
+# released for a year), the ideal preference list is 'TLSv1.2, TLS', which will allow
+# java 7 and 8 runtimes to negotiate to TLSv1.2, and java 6 to use the 'TLS' alias
+# to get to TLSv1.0.
+# At some point in 2015, TLSv1.3 will be released, and depending on server TLS
+# intolerance issues, could be added to the preference list to future-proof 
+# applications using d1_libclient_java to use that protocol if available to the
+# client runtime.
+# NOTE: because DataONE is a distributed network, libclient_java doesn't test
+# the TLS protocol against a DataONE server as it would not guarantee that it would
+# work with other DataONE nodes.
+tls.protocol.preferences=TLSv1.2,TLS
+
+# (at some point in the future, this would be the ideal TLS protocol preference,
+# depending on how Oracle decides to release TLSv1.3, and maintain the TLS
+# protocol alias)
+#tls.protocol.preferences=TLSv1.3,TLSv1.2,TLS
