--- a/src/main/resources/org/dataone/configuration/d1client.properties
+++ b/src/main/resources/org/dataone/configuration/d1client.properties
@@ -5,7 +5,7 @@ D1Client.CN_URL=https://cn.dataone.org/cn
 #
 # This property does not seem to be used by anyone in d1_libclient_java
 D1Client.certificate.directory=/etc/dataone/client/certs
-D1Client.useLocalCache=true
+D1Client.useLocalCache=false
 #D1Client.resourcesDir=/Users/jones/d1testdir
 CNode.useObjectFormatCache=true
 ObjectFormatCache.minimum.refresh.interval.seconds=20
