To sync the trunk code with changes in the 1.3 branch, also modify D1Object.download() to store objects to disk rather than in memory in order to avoid OutOfMemory exceptions. The storage location is configurable via the D1Client.io.tmpdir property, and defaults to the JVM java.io.tmpdir system property. refs https://redmine.dataone.org/issues/7322

--- a/src/main/resources/org/dataone/configuration/d1client.properties
+++ b/src/main/resources/org/dataone/configuration/d1client.properties
@@ -11,3 +11,6 @@ CNode.useObjectFormatCache=true
 ObjectFormatCache.minimum.refresh.interval.seconds=20
 #ObjectFormatCache.overriding.CN_URL=
 CNode.nodemap.cache.refresh.interval.seconds=3600
+
+# The location for temporary file storage (defaults to the java.io.tmpdir property value)
+#D1Client.io.tmpdir=
