--- a/pom.xml
+++ b/pom.xml
@@ -157,6 +157,12 @@
       <version>1.3</version>
       <type>jar</type>
       <scope>compile</scope>
+      <exclusions>
+         <exclusion>
+             <artifactId>jdbc-stdext</artifactId>
+             <groupId>javax.sql</groupId>
+         </exclusion>
+       </exclusions>
     </dependency>
   </dependencies>
   <build>
