refs #7648 Build 2.1.0 Beta release

--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <groupId>org.dataone</groupId>
   <artifactId>d1_libclient_java</artifactId>
   <packaging>jar</packaging>
-  <version>2.1.0-SNAPSHOT</version>
+  <version>2.1.0</version>
   <name>DataONE Java Client Library</name>
   <url>http://dataone.org</url>
   <properties>
@@ -11,8 +11,8 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
     <bouncycastle.version>1.52</bouncycastle.version>
-    <d1_common_java_version>2.1.0-SNAPSHOT</d1_common_java_version>
-    <d1_test_resources.version>2.1.0-SNAPSHOT</d1_test_resources.version>
+    <d1_common_java_version>2.1.0</d1_common_java_version>
+    <d1_test_resources.version>2.1.0</d1_test_resources.version>
   </properties>
   <repositories>
     <repository>
