--- a/src/main/resources/org/dataone/configuration/d1client.properties
+++ b/src/main/resources/org/dataone/configuration/d1client.properties
@@ -6,7 +6,7 @@ D1Client.CN_URL=https://cn.dataone.org/cn
 # This property does not seem to be used by anyone in d1_libclient_java
 D1Client.certificate.directory=/etc/dataone/client/certs
 # 
-D1Client.http.monitorIdleConnections=true
+#D1Client.http.monitorIdleConnections=true
 D1Client.default.timeout.ms=30000
 # if true, caches objects retrieved by MN/CNRead.get
 D1Client.useLocalCache=false
