refs: #7675: added custom keep-alive strategy to ensure all connections expire; refactored idleConnectionsMonitorThread to HttpConnectionMonitorService, a singleton that owns a thread that monitors any number of ConnectionManagers.  Added D1Client.http.keepAlaiveDuraction.sec property. Tested thread monitoring with unit test.

--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -58,4 +58,4 @@ log4j.appender.stderr.layout.ConversionPattern=%d{yyyyMMdd-HH:mm:ss}: [%p]: %m [
 log4j.logger.org.dataone.client.auth=INFO
 #log4j.logger.com.hp.hpl.jena=WARN
 #log4j.logger.org.dataone.ore=INFO
-
+#log4j.logger.org.apache.http=DEBUG
