--- a/src/test/resources/org/dataone/configuration/d1client.properties
+++ b/src/test/resources/org/dataone/configuration/d1client.properties
@@ -1,1 +1,11 @@
 D1Client.CN_URL=https://cn-nowhere.test.dataone.org/cn
+
+# per connection manager..
+D1Client.http.maxConnectionsPerServer=4
+D1Client.http.maxConnectionsTotal=80
+
+D1Client.http.monitorIdleConnections=true
+D1Client.http.default.timeouts.ms=30000
+
+# if true, caches objects retrieved by MN/CNRead.get
+D1Client.useLocalCache=false
