refs: #7685: Added client-side HTTP/1.1 caching to default HttpClient implementation.

--- a/src/main/resources/org/dataone/configuration/d1client.properties
+++ b/src/main/resources/org/dataone/configuration/d1client.properties
@@ -15,13 +15,24 @@ D1Client.http.monitorIdleConnections=false
 D1Client.http.default.timeouts.ms=30000
 
 # if true, caches objects retrieved by MN/CNRead.get
+# used for v1 API only, and it's use will be deprecated
 D1Client.useLocalCache=false
-#
-#D1Client.resourcesDir=/Users/jones/d1testdir
+
+# the caching httpClient will cache objects marked as cachable
+# by DataONE API reponses, (nodelists, formatlist, subject lists)
+D1Client.http.useCachingClient=true
+
+# the cache is by default configured to anticipate caching
+# nodeLists, formatLists, and accounts lists, so is not very large
+D1Client.http.cacheMaxEntries=50
+D1Client.http.cacheMaxObjectSize=102400
+
 CNode.useObjectFormatCache=true
 ObjectFormatCache.minimum.refresh.interval.seconds=20
 #ObjectFormatCache.overriding.CN_URL=
-CNode.nodemap.cache.refresh.interval.seconds=3600
+
 
 # The location for temporary file storage (defaults to the java.io.tmpdir property value)
 #D1Client.io.tmpdir=
+
+#D1Client.resourcesDir=/Users/jones/d1testdir
