--- a/src/test/resources/org/dataone/configuration/d1client.properties
+++ b/src/test/resources/org/dataone/configuration/d1client.properties
@@ -8,4 +8,13 @@ D1Client.http.monitorIdleConnections=true
 D1Client.http.default.timeouts.ms=30000
 
 # if true, caches objects retrieved by MN/CNRead.get
+# used for v1 API only, and it's use will be deprecated
 D1Client.useLocalCache=false
+
+# the caching httpClient will cache objects marked as cachable
+# by DataONE API reponses, (nodelists, formatlist, subject lists)
+D1Client.http.useCachingClient=true
+# the cache is by default configured to anticipate caching
+# nodeLists, formatLists, and accounts lists
+D1Client.http.cacheMaxEntries=50
+D1Client.http.cacheMaxObjectSize=102400
