--- a/pom.xml
+++ b/pom.xml
@@ -7,12 +7,11 @@
   <name>DataONE Java Client Library</name>
   <url>http://dataone.org</url>
   <properties>
-
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-
     <bouncycastle.version>1.52</bouncycastle.version>
     <d1_common_java.version>2.3.0-SNAPSHOT</d1_common_java.version>
     <d1_test_resources.version>2.3.0-SNAPSHOT</d1_test_resources.version>
+    <compiler.target.version>1.7</compiler.target.version>
   </properties>
   <repositories>
     <repository>
@@ -164,7 +163,7 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <configuration>
           <source>1.7</source>
-          <target>1.7</target>
+          <target>${compiler.target.version}</target>
         </configuration>
       </plugin>
       <plugin>
