--- a/pom.xml
+++ b/pom.xml
@@ -76,9 +76,8 @@
     </dependency>
     <dependency>
       <groupId>javax.servlet</groupId>
-      <artifactId>servlet-api</artifactId>
-      <version>2.5</version>
-      <type>jar</type>
+      <artifactId>javax.servlet-api</artifactId>
+      <version>3.0.1</version>
       <scope>provided</scope>
     </dependency>
     <!-- <dependency> <groupId>org.slf4j</groupId> <artifactId>slf4j-api</artifactId>
